--- a/libs/a11yc/css/a11yc.css
+++ b/libs/a11yc/css/a11yc.css
@@ -7,11 +7,18 @@
 [lang=ja] .a11yc {
 	font-family: helvetica, arial, "hiragino kaku gothic pro",meiryo,"ms pgothic",sans-serif;
 }
+.a11yc_icon_fa {
+	font-family: FontAwesome;
+	-webkit-font-smoothing: antialiased;
+}
 .a11yc_fl {
 	float: left;
 }
 .a11yc_fr {
 	float: right;
+}
+.a11yc li+li {
+	margin-top: .75em;
 }
 #jwp_a11y_error ul li,
 .inside ul li
@@ -35,6 +42,12 @@ tr.a11yc_flash {
 	outline: 4px solid rgba(255,255,0,.3) !important;
 	outline-offset: -3px !important;
 }
+.a11yc h1 {
+	font-size: 2em;
+	font-weight: normal;
+	border-bottom: 2px solid #68baef;
+	margin: .25em 0 .5em;
+}
 .a11yc h2 {
 	position: relative;
 	padding-left: 1.25em;
@@ -53,6 +66,10 @@ tr.a11yc_flash {
 	border-radius: 100%;
 	top: .25em;
 }
+.a11yc h1+h2,
+.a11yc h1+form h2:first-of-type {
+	margin-top: 1em;
+} 
 .a11yc p {
 	margin-top: .5em;
 }
@@ -129,6 +146,7 @@ tr.a11yc_flash {
 #a11yc_menu li {
 	position: relative;
 	display: inline-block;
+	margin-top: 0;
 	margin-left: 1.65em;
 	color: #fff;
 }
@@ -136,9 +154,11 @@ tr.a11yc_flash {
 	font-family: FontAwesome;
 	position: absolute;
 	left: 0;
-	top: 3px;
 	font-size: 1.125em;
 	-webkit-font-smoothing: antialiased;
+}
+[lang="ja"] #a11yc_menu li span:after {
+	top: 3px;
 }
 
 #a11yc_menu .a11yc_center span:after {
@@ -223,9 +243,8 @@ tr.a11yc_flash {
 	resize: vertical;
 }
 .a11yc [type="submit"] {
-	display: block;
-	width: auto;
 	min-width: 6em;
+	display: block;
 	margin: .5em 0 .5em auto;
 	padding: 5px 15px;
 	font-size: 1.1em;
@@ -241,7 +260,23 @@ tr.a11yc_flash {
 	background-color: #00538a;
 }
 #a11y_submit {
-	padding: 50px 0 20px;
+	padding: 10px 20px;
+	position: fixed;
+	text-align: right;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	background-color: #e6e6e6;
+}
+#a11y_submit label[for="a11yc_done"] {
+	margin-right: 1em;
+}
+#a11y_submit [type="submit"] {
+	display: inline;
+	margin: 0;
 }
 
 /* menu */
@@ -263,15 +298,17 @@ tr.a11yc_flash {
 	background-color: #0073aa;
 	color: #fff;
 }
-.a11yc #a11yc_narrow_level,
 .a11yc #a11yc_target_level,
 .a11yc #a11yc_current_level {
 	display: inline-block;
 	margin-right: .5em;
 }
-
+#a11yc_header_left {
+	width: calc( 100% - 20em );
+}
 #a11yc_header_right {
 	text-align: right;
+	width: 20em;
 }
 #a11yc_rest_total {
 	display: inline-block;
@@ -519,7 +556,7 @@ h2.a11yc_header_principle:after {
 .a11yc_table_check th {
 	border-left: 1px #bbb solid;
 	position: relative;
-	padding-left: 2.25em;
+	padding-left: 2.5em;
 	cursor: pointer;
 }
 .a11yc_table_check .off th {
@@ -528,20 +565,74 @@ h2.a11yc_header_principle:after {
 .a11yc .non_interference {
 	color: #e00;
 }
-.a11yc_table_check td {
-	padding: 8px 3px;
-	text-align: center;
-}
 .a11yc_table_check label {
 	display: block;
 }
 .a11yc_table_check input {
 	margin: 0;
 }
+.a11yc_table_check td {
+	padding: 8px 3px;
+	text-align: center;
+	white-space: nowrap;
+}
+td.a11yc_table_check_memo,
+td.a11yc_table_check_user {
+	width:5em;
+}
+td.a11yc_table_check_user select {
+	width: 5em;
+}
+td.a11yc_table_check_howto {
+	width: 2.5em;
+}
+
+/*
 .a11yc_table_check th input {
 	position: absolute;
 	left: 7px;
 	top: calc( 50% - .5em - 2px );
+}
+*/
+.a11yc_icon_checkbox {
+	position: absolute;
+	left: 7px;
+	top: calc( 50% - .5em );
+	font-size: 1.75em;
+}
+.a11yc_icon_checkbox:before {
+	content: "\f1db";
+	font-weight: normal;
+	color: #aaa;
+}
+:checked+.a11yc_icon_checkbox:before {
+	content: "\f111";
+	color: #1a5faa;
+}
+#a11yc_p_2 :checked+.a11yc_icon_checkbox:before {
+	color: #14a523;
+}
+#a11yc_p_3 :checked+.a11yc_icon_checkbox:before {
+	color: #e97108;
+}
+#a11yc_p_4 :checked+.a11yc_icon_checkbox:before {
+	color: #e33437;
+}
+:checked+.a11yc_icon_checkbox:after {
+	position: absolute;
+	left: .15em;
+	top: .275em;
+	font-size: .65em;
+	content: "\f00c";
+	color: #fff;
+}
+.a11yc_link_howto {
+	text-decoration: none;
+}
+.a11yc_icon_howto:before {
+	content: "\f29c";
+	color: #000;
+	font-size: 1.5em;
 }
 .a11yc_table_check tr:hover th,
 .a11yc_table_check tr:hover td {
@@ -563,7 +654,9 @@ h2.a11yc_header_principle:after {
 	opacity: 1;
 }
 /* setup */
-
+#a11yc_setup {
+	padding-bottom: 6em;
+}
 /* pages */
 #a11yc_pages .a11yc_result a {
 	text-decoration: none;
@@ -644,4 +737,14 @@ table .a11yc_result {
 	overflow: hidden;
 	clip: rect(1px 1px 1px 1px);
 	clip: rect(1px, 1px, 1px, 1px);
+}
+.a11yc_skip.a11yc_show_if_focus:focus {
+	display: block;
+	padding: 5px 10px !important;
+	text-decoration: none;
+	color: #0073aa !important;
+	background-color: #fff !important;
+	position: absolute;
+	overflow: auto;
+	clip: auto;
 }
