--- a/libs/a11yc/css/a11yc.css
+++ b/libs/a11yc/css/a11yc.css
@@ -261,7 +261,7 @@ tr.a11yc_flash {
 	background-color: #00538a;
 }
 #a11y_submit {
-	padding: 10px 20px;
+	padding: 5px 20px;
 	position: fixed;
 	text-align: right;
 	bottom: 0;
@@ -271,6 +271,7 @@ tr.a11yc_flash {
 	box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	background-color: #e6e6e6;
+	border-top: 1px solid #ccc;
 }
 #a11y_submit label[for="a11yc_done"] {
 	margin-right: 1em;
