--- a/libs/a11yc/css/a11yc.css
+++ b/libs/a11yc/css/a11yc.css
@@ -53,7 +53,13 @@ a:link {
 [lang=ja] #a11yc_tooltip {
 	font-family: helvetica, arial, "hiragino kaku gothic pro",meiryo,"ms pgothic",sans-serif;
 }
-
+ul.a11yc_msg {
+	padding: 10px 5px 10px 25px;
+	background-color: #d2eafa;
+}
+ul#a11yc_msg_error {
+	background-color: #faeaea;
+}
 acronym,
 abbr
 {
@@ -345,6 +351,10 @@ tr.a11yc_flash {
 	text-align: right;
 	margin-top: -3.25em;
 	margin-bottom: .25em;
+}
+.a11yc_msg+form #a11yc_header_top {
+	margin-top: -7em;
+	margin-bottom: 4.25em;
 }
 .wp-admin #a11yc_header_top {
 	text-align: right;
