--- a/libs/a11yc/css/a11yc.css
+++ b/libs/a11yc/css/a11yc.css
@@ -55,7 +55,7 @@ a:link {
 }
 ul.a11yc_msg {
 	padding: 10px 5px 10px 25px;
-	background-color: #d2eafa;
+	background-color: #d2f0fb;
 }
 ul#a11yc_msg_error {
 	background-color: #faeaea;
