checklist view_source, howto->doc

--- a/libs/a11yc/css/a11yc.css
+++ b/libs/a11yc/css/a11yc.css
@@ -16,6 +16,53 @@ a:link {
 	font-family: FontAwesome;
 	-webkit-font-smoothing: antialiased;
 }
+.a11yc_cmt {
+	margin-top: 40px;
+	padding: 20px;
+	background-color: #fff;
+	border: 1px solid #999;
+}
+.a11yc_source {
+	margin-top: 40px;
+	padding: 5px 10px 5px 0;
+	background-color: #fff;
+	color: #111;
+	border: 1px solid #999;
+	font-size: .9em;
+	font-family: monospace;
+}
+.a11yc_source table {
+	width: 100%;
+}
+.a11yc_source tr {
+	counter-increment: a11yc_source;
+}
+.a11yc_source td {
+	border-bottom: 1px solid transparent;
+}
+.a11yc_source tr:before {
+	content: counter(a11yc_source)" : ";
+	display: table-cell;
+	width: 1px;
+	white-space: nowrap;
+	text-align: right;
+	color: #999;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+.a11yc_source tr:hover > * {
+	background-color: #fefedd;
+} 
+
+div.a11yc_disclosure_target {
+	margin-top: 5px;
+} 
+.a11yc_cmt h2:first-child,
+.a11yc_cmt h3:first-child {
+	margin-top: 0;
+}
 .a11yc_fl {
 	float: left;
 }
@@ -464,6 +511,7 @@ table#a11yc_rest {
 ul#a11yc_errors {
 	padding: 10px 5px 10px 40px;
 	background-color: #fee;
+	word-break: break-all;
 }
 #a11yc_menu_principles {
 	margin: 0;
@@ -478,9 +526,12 @@ ul#a11yc_errors {
 #a11yc_menu_principles li {
 	display: block;
 	float: left;
-	width: 25%;
-	margin: 0;
+	width: calc( 25% - 2px );
+	margin: 0 0 0 1px;
 }
+#a11yc_menu_principles li+li {
+	margin-left: 2px;
+	}
 #a11yc_menu_principles a {
 	display: block;
 	padding: 10px;
@@ -797,6 +848,20 @@ span.a11yc_icon_check:before {
 	font-size: 1.5em;
 	color: #333;
 }
+
+
+/* center */
+#a11yc_center_about {
+	position: relative;
+	padding-right: 130px;
+	min-height: 120px;
+}
+#a11yc_center_about #a11yc_logo_author {
+	position: absolute;
+	top: 20px;
+	right:20px;
+	width: 120px;
+} 
 /* docs */
 #a11yc_docs_search {
 	text-align: right;
@@ -813,14 +878,6 @@ span.a11yc_icon_check:before {
 #a11yc_docs .a11yc_header_guideline.a11yc_disclosure.hide {
 	border-width: 1px;
 	border-bottom-style: dotted;
-}
-#a11yc_docs .a11yc_ul_test,
-#a11yc_docs .a11yc_ul_check {
-	padding-left: 10px;
-}
-#a11yc_docs .a11yc_ul_test > li,
-#a11yc_docs .a11yc_ul_check > li {
-	list-style-type: none;
 }
 #a11yc_docs .a11yc_ul_test ul,
 #a11yc_docs .a11yc_ul_check ul {
@@ -852,7 +909,6 @@ span.a11yc_icon_check:before {
 #a11yc_docs .a11yc_ul_check h2:after {
 	content: none;
 }
-
 
 /* result */
 table .a11yc_result {
@@ -886,6 +942,11 @@ table .a11yc_result {
 .a11yc_disclosure.active:hover {
 	background-color: rgba(0,0,0,.05);
 }
+.a11yc li.a11yc_disclosure_parent {
+	list-style-type: none;
+	margin-left: -20px;
+}
+
 .a11yc .a11yc_dn {
 	display: none;
 }
