--- a/libs/a11yc/css/a11yc.css
+++ b/libs/a11yc/css/a11yc.css
@@ -16,6 +16,12 @@ a:link {
 	font-family: FontAwesome;
 	-webkit-font-smoothing: antialiased;
 }
+.a11yc_loading {
+	min-height: 60px;
+	background-image: url('../img/mark_loading_m.gif');
+	background-repeat: no-repeat;
+	background-position: center top;
+}
 .a11yc_cmt {
 	margin-top: 40px;
 	padding: 20px;
@@ -61,7 +67,7 @@ a:link {
 
 div.a11yc_disclosure_target {
 	margin-top: 5px;
-} 
+}
 .a11yc_cmt h2:first-child,
 .a11yc_cmt h3:first-child {
 	margin-top: 0;
@@ -157,7 +163,7 @@ tr.a11yc_flash {
 .a11yc h1+h2,
 .a11yc h1+form h2:first-of-type {
 	margin-top: 1em;
-} 
+}
 .a11yc p {
 	margin-top: .5em;
 }
@@ -454,7 +460,7 @@ tr.a11yc_flash {
 }
 .a11yc_fixed_header #a11yc_header_right {
 	margin-top: 1.8em;
-} 
+}
 #a11yc_rest_total {
 	display: inline-block;
 	width: 2em;
@@ -767,7 +773,7 @@ input:focus+.a11yc_icon_checkbox:before {
 	box-shadow: 0 0 3px 2px rgba( 0,115,170,.5 );
 	-moz-box-shadow: 0 0 3px 2px rgba( 0,115,170,.5 );
 	-webkit-box-shadow: 0 0 3px 2px rgba( 0,115,170,.5 );
-	
+
 }
 :checked+.a11yc_icon_checkbox:before {
 	content: "\f111";
@@ -864,7 +870,7 @@ span.a11yc_icon_check:before {
 	top: 20px;
 	right:20px;
 	width: 120px;
-} 
+}
 /* docs */
 #a11yc_docs_search {
 	text-align: right;
